Working on CC-65

--- a/Nicole/StatsNotebooks/CC65-Central_Tendency.ipynb
+++ b/Nicole/StatsNotebooks/CC65-Central_Tendency.ipynb
@@ -91,32 +91,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Analysis : Mean, Median, and Mode \n",
+    "# Data Analysis: Mean, Median, and Mode\n",
     "\n",
-    "In this notebook, we discuss the central tendency (mean, median and mode).<br>\n",
-    "First, we will review the very basics of mean, median, mode, and outlier.<br>\n",
-    "Further details are readily available on the internet, such as [this website for Australian junior high students](https://www.mathsteacher.com.au/year8/ch17_stat/02_mean/mean.htm). \n",
+    "##### Grade 7 Statistics \n",
     "\n",
-    "We will use the Python programming language to import and process several sets of data.<br>\n",
-    "In particular, using Python, we can quickly calculate the mean, median, and mode for a dataset. \n",
+    "This notebook will cover 3 important statistics: mean, median, and mode. These three statistics are known as the measures of central tendency because they tell us where data is centered or clustered together. \n",
+    "Here are a few questions this notebook will answer:\n",
+    "* What is mean? \n",
+    "* What is median? \n",
+    "* What is mode?\n",
+    "* When do we use each of these statistics?\n",
     "\n",
-    "This notebook is organized as follows.\n",
-    "* In Section 1, we discuss the preliminaries, definition of mean, median and mode.  \n",
-    "* Section 2 presents an interactive bar graph so that students can play with central tendency. \n",
-    "* In Section 3, students will find a real time application of mean, median and mode.\n",
-    "* Section 4 concludes the notebook with exercises for students.\n",
+    "If you want a good summary of this topic, check out [this website for Australian junior high students](https://www.mathsteacher.com.au/year8/ch17_stat/02_mean/mean.htm)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Definitions\n",
     "\n",
-    "##  1 Preliminaries \n",
-    "### 1.1 What do we mean about the 'mean'?\n",
-    "The *average* of a set of numbers is called the **mean**. \n",
-    "<br> To calculate: add up all the numbers and then divide by how many numbers there are. \n",
+    "### What is 'mean'?\n",
     "\n",
-    "##### Example 1 : easy\n",
-    "Data set: $2, 6, 3, 7, 5, 3, 9$\n",
-    "<br> Number of elements in data set: $7$\n",
-    "<br>So the mean is\n",
-    "$$\\text{mean} = \\frac{2 + 6 + 3 + 7 + 5 + 3 + 9}{7} = 5 $$\n",
+    "No, we don't mean being rude to other people. A **mean (sometimes called an average)** of a set of numbers is the sum of all the values divided by the number of number of values. \n",
     "\n",
+    "##### Example 1\n",
+    "Here is a data set: $2, 6, 3, 7, 5, 3, 9$\n",
+    "<br> Number of elements in this data set: $7$\n",
+    "<br>So the mean is:\n",
+    "$$\\text{mean} = \\frac{2 + 6 + 3 + 7 + 5 + 3 + 9}{7} = \\frac{35}{7} = 5 $$\n",
+    "\n",
+    "Now these are just numbers, let's see where the mean applies in real life. \n",
+    "\n",
+    "##### Example 2\n",
+    "In Rose Middle School, there's 3 classes of 8th graders. The first one has 25 students, the second has 18 students, and the third has 20 students. What is the average number of students in one class?\n",
+    "<br> **Remember that average is the same as mean**\n",
+    "\n",
+    "Our set of data is $(25, 18, 20)$ and there is $3$ elements in this set. Now we can calculate the mean.\n",
+    "\n",
+    "$$\\text{mean} = \\frac{25 + 18 + 20}{3} = \\frac{63}{3} = 21 $$\n",
+    "\n",
+    "That means that 8th graders in Rose Middle School have an average of 21 students per class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Example 2 : Never average averages\n",
     "**If Tommy averaged $20$ points for $3$ basketball games and $30$ points in next two, what was his average for all five games?**\n",
     "###### Solution:\n",
@@ -132,61 +153,76 @@
     "Averaging these gives us our result.\n",
     "\n",
     "**Note:** there is a way to correctly \"average averages,\" but it's beyond the level of this notebook.<br>\n",
-    "If you're curious, you can read online about how to calculated a [weighted mean](https://en.wikipedia.org/wiki/Weighted_arithmetic_mean).\n",
-    "\n",
+    "If you're curious, you can read online about how to calculated a [weighted mean](https://en.wikipedia.org/wiki/Weighted_arithmetic_mean)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "As we will see in [our next notebook](CC66-Effect_Of_Outliers_On_Central_Tendency.ipynb), the mean of a dataset is sensitive to extreme values (outliers).<br>\n",
     "This can be useful in situations where we want to take those values into account.<br>\n",
-    "For example, if we include the cost of home heating in a household budget, the average cost of our heating bill will give the best measure of heating's impact on our budget over the course of a year.\n",
+    "For example, if we include the cost of home heating in a household budget, the average cost of our heating bill will give the best measure of heating's impact on our budget over the course of a year."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What is median?\n",
     "\n",
-    "### 1.2 Median : don't play in the MEDIAN at home kids!\n",
-    "The **median** is the middle number in a sequence of numbers.<br>\n",
-    "To compute the median, first, reorder the data set from the smallest to the largest.<br>\n",
-    "If the number of elements is odd, then the median is the element in the middle of the data set.<br>\n",
-    "Otherwise, the median is the average of the two middle terms.\n",
+    "Don't play in the MEDIAN at home kids! Oh wait, wrong median!\n",
+    "The **median** is the middle number in a sequence of numbers.To compute the median, the set needs to be ordered from smallest to largest. Then it's easy to find the middle number!<br>\n",
     "\n",
-    "\n",
-    "##### Example 1 : odd number of elements\n",
+    "##### Example 1\n",
     "Data set: $2, 6, 3, 7, 5, 3, 9$\n",
-    "<br> Sorted data set: $2, 3, 3, 5, 6, 7, 9$\n",
-    "<br> So, median will be $5$.\n",
+    "<br> Now if we sort the data set: $2, 3, 3, 5, 6, 7, 9$\n",
+    "<br> So, median will be $5$ because it's 4 numbers in from both sides\n",
     "\n",
-    "##### Example 2 : even number of elements \n",
-    "Data set: $2, 6, 3, 7, 5, 3, 9, 4 $\n",
+    "Did you notice that this data set has an odd number of values? What is the problem if there's an even number of values in a set? How can we figure out the median? We still want the middle number, so we can't choose one closer to either the left or the right side. We can average the two numbers closest to the middle to get a true middle number for the whole set!\n",
+    "\n",
+    "##### Example 2\n",
+    "Data set: $2, 6, 3, 7, 5, 3, 9, 4 $ <br>\n",
+    "**Notice how there's 8 values in this set**\n",
     "<br> Sorted data set: $2, 3, 3, 4, 5, 6, 7, 9$\n",
-    "<br> Therefore, the median will be $\\frac{(4+5)}{2} = 4.5$\n",
-    "\n",
+    "<br> There two middle numbers are $4$ and $5$\n",
+    "<br> Therefore, the median will be $\\frac{(4+5)}{2} = 4.5$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The median is a useful statistic because it is **not** as sensitive to extreme values.<br>\n",
     "(You will see this for yourself in [the sequel to this notebook](CC66-Effect_Of_Outliers_On_Central_Tendency.ipynb).)<br>\n",
     "For example, businesses -- or city planners -- are more interested in median income than mean income when making decisions on where to locate a business or service.<br>\n",
-    "One very wealthy person moving to an area will increase the mean income in that area, but not the median.\n",
+    "One very wealthy person moving to an area will increase the mean income in that area, but not the median."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What is mode?\n",
     "\n",
-    "\n",
-    "### 1.3 Mode\n",
     "The **mode** for a data set is the element that occurs the most often.<br>\n",
-    "It is not uncommon for a data set to have more than one mode.<br>\n",
-    "This happens when two or more elements occur with equal frequency in the data set.<br>\n",
-    "Similarly, A data set with two modes is called **bimodal**.<br>\n",
-    "A data set with three modes is called **trimodal**.\n",
+    "It's possible for a data set to have no modes, one mode, two modes (bimodal), or even three modes (trimodal)!<br>\n",
+    "To find the mode, you don't have to sort the set, but it is very helpful to sort it as the mode(s) will be where a number is repeated and that's easier to see when they are next to each other.\n",
     "\n",
-    "##### Example 1 : single mode\n",
+    "##### Example 1\n",
     "Data set: $2, 6, 3, 7, 5, 3, 9$\n",
     "<br> Sorted data set: $2, 3, 3, 5, 6, 7, 9$\n",
-    "<br> Here, only the value $3$ repeats more than once. \n",
+    "<br> Here, only the value $3$ repeats and all other values only appear once. \n",
     "<br>So, mode will be $3$.\n",
     "\n",
-    "##### Example 2 : bimodal\n",
-    "Data set: $2, 6, 3, 7, 5, 3, 9, 5, 3, 5 $\n",
-    "<br> Sorted data set: $2, 3, 3, 3,  5, 5, 5,  6, 7, 9$\n",
+    "##### Example 2\n",
+    "Data set: $2, 6, 3, 7, 5, 3, 9, 5, 3, 5, 6 $\n",
+    "<br> Sorted data set: $2, 3, 3, 3,  5, 5, 5,  6, 6, 7, 9$\n",
     "<br> Values $3$ and $5$ have same number of repetitions. \n",
+    "<br> Notice how $6$ is also repeated but it is not as many times as $3$ or $5$ so it is not part of the mode.\n",
     "<br>So, the mode will be, $3, 5$\n",
     "\n",
-    "##### Example 3 : trimodal\n",
-    "Data set: $2, 6, 3, 7, 5, 3, 9, 5, 7$\n",
-    "<br> Sorted data set: $2, 3, 3, 5, 5, 6, 7, 7, 9$\n",
-    "<br> As we can see from the sorted list of data, $3,5,$ and $7$ are repeated twice.\n",
-    "<br> So, mode will be,  $3, 5, 7$.\n",
-    "\n",
-    "##### Example 4 : no mode \n",
+    "##### Example 3 \n",
     "Data set: $2, 6, 3, 7, 5, 8, 9, 4 $\n",
     "<br> Sorted data set: $2, 3, 4, 5, 6, 7, 8, 9$\n",
     "<br>There are no value that repeats. \n",
@@ -197,32 +233,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2 Interactive bar graph\n",
+    "## 2. Interactive bar graph\n",
     "Now you can play with a bar graph and examine how to calculate mean, median, and mode by changing values of the dataset. \n",
     "\n",
-    "### 2.1 Instructions: \n",
-    "* Step 1: enter how many data points you have in \"Enter the numbers of the dataset.\" <br>\n",
-    "* Step 2: based on your input in step 1, sliders will be available (one for each data point). <br>\n",
-    "* Step 3: change the value of sliders and see the associated changes in the bar graph.<br>\n",
-    "* Step 4: to show the breakdown for calculating mean check the box Mean, for median check Median and so on.<br>"
+    "### Instructions: \n",
+    "* Step 1: enter how many data points you have in \"Enter the numbers of the dataset.\" **Max of 10** <br>\n",
+    "  * based on your input in step 1, sliders will be available (one for each data point). <br>\n",
+    "* Step 2: change the value of sliders and see the associated changes in the bar graph.<br>\n",
+    "* Step 3: to show the breakdown for calculating mean check the box Mean, for median check Median and so on.<br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Collecting geogebra from git+git://github.com/callysto/nbplus.git#egg=geogebra&subdirectory=geogebra\n",
-      "  Cloning git://github.com/callysto/nbplus.git to /tmp/pip-install-hoa43bg3/geogebra\n",
+      "  Cloning git://github.com/callysto/nbplus.git to /tmp/pip-install-n3nb7_a3/geogebra\n",
       "Building wheels for collected packages: geogebra\n",
       "  Running setup.py bdist_wheel for geogebra ... \u001b[?25ldone\n",
-      "\u001b[?25h  Stored in directory: /tmp/pip-ephem-wheel-cache-rmwp1ml3/wheels/cd/8f/54/42a9349ed6e488bb120c4c182ad6aa4f19e86061fe875bf3c5\n",
+      "\u001b[?25h  Stored in directory: /tmp/pip-ephem-wheel-cache-1i8f1yso/wheels/cd/8f/54/42a9349ed6e488bb120c4c182ad6aa4f19e86061fe875bf3c5\n",
       "Successfully built geogebra\n",
       "Installing collected packages: geogebra\n",
       "  Found existing installation: geogebra 0.0.0\n",
@@ -233,12 +267,12 @@
     }
    ],
    "source": [
-    "!pip install --upgrade --force-reinstall --user git+git://github.com/callysto/nbplus.git#egg=geogebra\\&subdirectory=geogebra"
+    "!pip install --upgrade --force-reinstall --user git+git://github.com/callysto/nbplus.git ; #egg=geogebra\\&subdirectory=geogebra "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -548,7 +582,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f4a0aad9f5547c1ac017569423c1a28",
+       "model_id": "81fea604a6864b8ebaa21073697d55c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -694,7 +728,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4f3557b56714e5db4ab3b12ffc75b31",
+       "model_id": "91e1c8816b624ba28f1c7356369037e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -844,7 +878,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73ba00be3547475ba91ebf511d71594b",
+       "model_id": "87b4af33f8f44b1aa538ed7e0fbf0a55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1006,7 +1040,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9cee9aae47fe4b1d87d1b9f7ea6b8612",
+       "model_id": "02b30197c5d746d190d34e3c87e9ece0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1158,16 +1192,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.3.1 What is Sara's mean test score? (Source: dummies)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"4.3.1 What is Sara's mean test score? (Source: dummies)\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3d44eb63dbd4b23b84bfe67f699295f",
+       "model_id": "251c264edce842958345ea91d8470d4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1187,11 +1223,18 @@
        "</p>\n"
       ],
       "text/plain": [
-       "RadioButtons(description='Choices:', options=('Select best one', '78', '83.5', '100', '84', 'None of the above'), value='Select best one')"
+       "RadioButtons(description='Choices:', index=4, options=('Select best one', '78', '83.5', '100', '84', 'None of the above'), value='84')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct Answer!\n"
+     ]
     }
    ],
    "source": [
@@ -1341,7 +1384,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ab76d4d9312466b8db5c9a5a74a1cc4",
+       "model_id": "e9ff8c4e2fef4fb0988009cd21ba1c37",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1487,16 +1530,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.4.1 What is/are the mode of her records?\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'4.4.1 What is/are the mode of her records?'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "793cc5d9c30242fbb32aeb054ffbe2ff",
+       "model_id": "478c0551b33b4ee9976589ee38f52bd4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1516,11 +1561,18 @@
        "</p>\n"
       ],
       "text/plain": [
-       "RadioButtons(description='Choices:', options=('Select best one', '6', ' 7', '6 and 7', '8 and 9', 'None of the above'), value='Select best one')"
+       "RadioButtons(description='Choices:', index=3, options=('Select best one', '6', ' 7', '6 and 7', '8 and 9', 'None of the above'), value='6 and 7')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct Answer!\n"
+     ]
     }
    ],
    "source": [
@@ -1637,16 +1689,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.4.2 The average of five positive integers is less than 20. What is the smallest possible median of this set?\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'4.4.2 The average of five positive integers is less than 20. What is the smallest possible median of this set?'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c984ee1b9be3414492a260d38d07c46e",
+       "model_id": "515dfc81de6f45808ebd5c2c983e50d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1666,11 +1720,18 @@
        "</p>\n"
       ],
       "text/plain": [
-       "RadioButtons(description='Choices:', options=('Select best one', '1', '2', '4', '19', 'None of the above'), value='Select best one')"
+       "RadioButtons(description='Choices:', index=1, options=('Select best one', '1', '2', '4', '19', 'None of the above'), value='1')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct Answer!\n"
+     ]
     }
    ],
    "source": [
