Mostly finished content first draft

--- a/Vincent/CC-193 Geometry Basics 5/GeometryBasics5.ipynb
+++ b/Vincent/CC-193 Geometry Basics 5/GeometryBasics5.ipynb
@@ -21,40 +21,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Target Audience: Grade 8\n",
-    "\n",
-    "Related Curriculum Outcome:\n",
-    "\n",
-    "Strand: Shape and Space (Measurement) - Students will:\n",
-    "\n",
-    "- estimate and take accurate measurements using everyday metric (SI) and imperial units of measure\n",
-    "- solve problems, using appropriate measuring devices (i.e., metric [SI] and imperial), strategies and technology in home, workplace and community contexts\n",
-    "- communicate mathematically and investigate the application of measurement knowledge and skills in a variety of career and workplace situations, working individually or as members of a team\n",
-    "- assess reasonableness of calculations and problem-solving strategies.\n",
-    "\n",
-    "Grade 8: General Outcome - Students will:\n",
-    "\n",
-    "- use measurement concepts, appropriate tools and results of measurements to solve problems in everyday contexts.\n",
-    "\n",
-    "Specific Outcomes - Students will:\n",
-    "\n",
-    "10. recognize the relationships among seconds, minutes, hours, days, weeks, months, years, centuries and millennia, using a variety of tools; e.g., calendars and technology\n",
-    "11. estimate and measure time on 12-hour and 24-hour clocks, using digital and analog timepieces\n",
-    "12. convert between hours and minutes and between minutes and seconds, as required in everyday contexts\n",
-    "\n",
-    "Deliverable:\n",
-    "\n",
-    "An interactive notebook to examine and visualize concepts and examples related to this curriculum outcome."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Time\n",
-    "Time is a concept we are all very familiar with, seconds, minutes, hours, and days are simply part of our everyday life. Have you ever wondered about how all these units of time relate or why we use \"am\" and \"pm\" when talking about the hours of the day?\n",
+    "Time is a concept we are all very familiar with, seconds, minutes, hours, and days are simply part of our everyday life. Have you ever wondered about how all these units of time relate or why we use \"am\" and \"pm\" when talking about the hours of the day? \n",
     "\n",
-    "In this notebook we will explore the relationships between all the different units of time and how to use different tools to read and keep track of time. We will also learn how to easily convert between hours, minutes and seconds. "
+    "There are two important distinctions to make when thinking of time:\n",
+    " 1. Telling the time, looking at a clock and knowing what time it is at that time\n",
+    " 2. Measuring the time, using a clock or other tools to measure how long something takes or using a countdown to something\n",
+    "\n",
+    "In this notebook we will explore the relationships between all the different units of time and how to use different tools to read and keep track of time. We will also learn how to easily convert between hours, minutes and seconds."
    ]
   },
   {
@@ -75,23 +49,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Measuring Time\n",
-    "Now days the time is everywhere, we simply look for a clock on a wall, appliance, a watch, or our phones. This was not always the case though, does this mean time did not exist long ago? Egyptians 1500 BC (roughly 3500 years ago) where very much aware of time and found very cleaver ways for measuring it. For these ancient civilyzation, as for us, knowing the time and months of the year was crutial to their survival. Turns out the most important clocks of all where not found on earth but in the sky! The stars and sun have been used to measure time for thousands of years and by many civilizations. Using the position of the sun casting shadows was used during the day and the position of know constelation where used at night. \n",
-    "\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/6/66/Sundial_-_Canonical_Hour.jpg\" width=\"400\">\n",
-    "<img src=\"https://c.tadst.com/gfx/750x500/tell-time-with-stars.png?1\" width=\"400\">\n",
-    "\n",
-    "Luckily for us we have evolved far beyond using the sun and stars to tell time, imagine trying to get to school on time on a cloudy day! Now days when we get a new watch or clock we simply synchronize it to match another time piece showing the correct time. More and more as devices are connected to the internet we dont even have to set the time, it is done automatically!\n",
-    "\n",
-    "But what about other ways to measure time? What about measuring how long something took?  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## How Well do you Know Time?\n",
-    "Let's play a little game, think you can guess exactly 15 seconds without using a clock? If you think you can do it click the button below, when you think its been 15 seconds click it again and see how close you are."
+    "Ok so now that we have a little background to how time came about let's play a little game. Do you think you can guess exactly 15 seconds without using a clock? If you think you can do it click the button below, when you think its been 15 seconds click it again and see how close you are. (Click again if you want to try retry)"
    ]
   },
   {
@@ -177,7 +136,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Talk about why we use fractional time like half past, quarter to..."
+    "So how did you do? Not as easy as it seems eh. Most people, when trying this the first time, end up clicking much too early. You may have counted up to 15 \"Missisipis\" in your head which can help get closer to 15 seconds, but what if I asked you to guess 3 minutes? Rythmically counting to 180 \"Missisipis\" is not my kind of fun. This example shows the importance of using tools to more accuratly measure time. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reading Time\n",
+    "Now days the time is everywhere, we simply look for a clock on a wall, appliance, a watch, or our phones. This was not always the case though, does this mean time did not exist long ago? Egyptians 1500 BC (roughly 3500 years ago) where very much aware of time and found very cleaver ways for measuring it. For these ancient civilyzation, as for us, knowing the time and months of the year was crutial to their survival. Turns out the most important clocks of all where not found on earth but in the sky! The stars and sun have been used to measure time for thousands of years and by many civilizations. Using the position of the sun casting shadows was used during the day and the position of know constelation where used at night. \n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/6/66/Sundial_-_Canonical_Hour.jpg\" width=\"400\">\n",
+    "<img src=\"https://c.tadst.com/gfx/750x500/tell-time-with-stars.png?1\" width=\"400\">\n",
+    "\n",
+    "Luckily for us we have evolved far beyond using the sun and stars to tell time, imagine trying to get to school on time on a cloudy day! Now days when we get a new watch or clock we simply synchronize it to match another time piece showing the correct time. More and more as devices are connected to the internet we dont even have to set the time, it is done automatically!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Units of Time\n",
+    "So if I ask you what time it is right now you could easily look at a clock and tell me right? For example you could go as far as saying \"it is 11:37:12 on Monday December 17, 2018\", now that is probably a lot more information then was asked when asking for the time but bare with me. Let's break down all the components of that sentence: \n",
+    "\n",
+    "- 1 year is made up of 365 days (366 if the year is leap)\n",
+    "- 1 day is made up of 24 hours\n",
+    "- 1 hour is made up of 60 minutes\n",
+    "- 1 minutes is made up of 60 seconds\n",
+    "- 1 second is made up of 1000 milliseconds\n",
+    "\n",
+    "We could keep going but already 1 millisecond happens so fast that they are rarly used in everyday life.\n",
+    "\n",
+    "Let's visualize this by using an analogue clock. If you count all the ticks around the clock you will find out that there are 60 of them, this makes sense as 1 one hour is made up of 60 minutes and 1 minute is made up of 60 seconds. In everyday life we know a clock only ever goes forward, and some might say it moves relativly slow, this can make it hard to fully understand its pattern. This example breaks these rules and allows you to manipulate the clock forward and backwards, fast or slow. \n",
+    "\n",
+    "If you adjust the slider below the clock you will see that the hands will begin to move. Each tick on the slider represents a second. Try adjusting the time to see how each hand behave. (You can also use your keyboard's side arrows to tick through 1 second at a time)"
    ]
   },
   {
@@ -273,6 +265,7 @@
     "            ctx.beginPath();\n",
     "            ctx.moveTo(-28, 0);\n",
     "            ctx.lineTo(160, 0);\n",
+    "            ctx.strokeStyle = \"#0000FF\"\n",
     "            ctx.stroke();\n",
     "            ctx.restore();\n",
     "\n",
@@ -318,7 +311,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Geomatry - Basics\n"
+    "What have you noticed about the relationships between the hands as you slide back and forth? Have you noticed that in order for the minute hand (blue) to move one full tick the seconds hand (red) must do one full rotation? You may also have noticed that the hour hand (black) moves very slowly compared to the other hands but it seems to go past more then 1 tick before the minute hand has done a full rotation. That is because a day has 24 hours, not 60 hours. Remember earlier when we talked about AM and PM, the 24 hour day was broken down into 2 12 hour sections. So we can see that if we divide a full rotation (60 minutes) into 12 hours we get $$60\\div12=5$$ This means in the time the minute hand does a full rotation, meaning 60 minutes, the hour hand will advance 5 ticks on the clock. You will see this happeneing if you slide the slider from the far left all the way to the far right, the minute hand will have done a full rotation and the hour hand will have moved 5 ticks. \n",
+    "\n",
+    "Now that we have a better understanding of the realtionships between the units can we figure out how many seconds are in 1 hour? Sure we can! Let's think about this, so in 1 hour the minute hand goes around 60 times and for each one of these minutes the seconds hand goes around 60 times, this must mean $$60_\\frac{min}{hr} \\times60_\\frac{sec}{min}=3600_\\frac{sec}{hr}$$ So 1 hour has 3600 seconds, this means if you use your keyboard arrows on the slider from left to right you will need to push it 3600 times!! (Don't do that)\n",
+    "\n",
+    "Based on this math can you figure out how many seconds are in a day? or how many minutes are in a week?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Measuring Time\n",
+    "So as we all know being able to tell the time is a crucial part of our everyday lives, it helps us know when we have appointments, when we should eat or when we should go to sleep. Time also has many other great uses like keeping time for a hockey game or measuring how long it takes to drive from one city to another. Let's take the traveling from city to another example, say you are going from Calgary to Edmonton and you want to calculate how long the trip takes. The simplest way of doing this with extra tools is to simply write down the time when you leave then check the time when you arrive. Now all we do is take the difference of these two times. Let's say you leave at 1:32 and arrive at 4:47, you can probably estimate in your head that the trip took a little over 3 hours but we can calculate it exactly. To make this simpler we will convert the format from hours:minutes to just have minutes, lets recall how many minutes are in 1 hour to get the following $$(1_{hr}\\times60_\\frac{min}{hr})+32_{min}=60_{min} + 32_{min}=92_{min}$$ $$(4_{hr}\\times60_\\frac{min}{hr})+47_{min}=240_{min} + 47_{min}=287_{min}$$ And now we get the difference $$287_{min}-92_{min}=195_{min}$$ So the trip took 195 minutes to get from Calgary to Edmonton. To get it back into the hours:minutes format we need to figure out how many times $195$ can be divided by $60$, we can see that $60$ will fint $3$ times inside $195$ and we will be left with a remainder of $15$, therefore the trip took 3 hours and 15 minutes.\n",
+    "\n",
+    "Ok so that wasn't too bad, it took some work to get an exact value but it is definitely doable. Now let's take our hockey example and look at how we could keep track of the time for the game. A few things to consider before attempting this \n",
+    "1. The time goes backwards from 20 minutes down to 0 milliseconds\n",
+    "2. The time has to stop every time the whistle is blown\n",
+    "3. The time has to be accurate to the 100 millisecond\n",
+    "\n",
+    "Analyzing this problem we can quickly see that if all we have is a regular clock then a hockey game would take a very long time between each whistle blown as someone would have to calculate the differences in time between each stop and start. Thankfully we have many different types of tools to measure times like this, in this case a scoreboard with a timeclock built in does the trick. \n",
+    "<img src=\"http://www.fair-play.com/wp-content/photos-drawings/HK-1600-4.jpg\" width=\"600\">\n",
+    "Now all the time keeper has to do is stop and start time as the whistle is blown and the play starts again.\n",
+    "\n",
+    "In other sports sometimes a fraction of a second makes the difference between first and second place or during a critical science expirement where exact time measurments are required. With examples like these we can see that a person's reflex to start/stop a clock is proabbly not going to cut it. Many other techniques have been developed to overcome these challanges, laser sensors are far more accurate then the human hand-to-eye cordination. \n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/c/c0/LightBeamTiming.jpg/220px-LightBeamTiming.jpg\">\n",
+    "The image above is of a light beam sensor used on the Olympic track."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 24-Hour Clock\n",
+    "As we now know a day has 24 hours, we also know why AM and PM where introduced and still used today. Another wildly popular way of representing time is to use the 24 hour clock, this means we no longer need to us AM and PM. Using the 24 hour clock simply means we don't go back to one after we pass noon, we keep going from 12 to 13. This may seem odd at first as saying it is 13 o'clock is not something we are use to. One major benifit to using this format is that you will never set your alarm wrong by putting 8PM instead of 8AM, 8 just means 8 in the morning and 20 means 8 at night. \n",
+    "\n",
+    "If you use this fomrat enough knowing that 16:03 actually means 4:03pm becomes secound nature but your probably wondering how to quickly get this answer when you are not use to it yet. All you have to do is take the hour $16$ and minus $12$ from it so $$16-12=4\\ o'clock$$ A good way to quickly do this in your head is to first take away $10$ which is easy to do then remove the last $2$ so $$16-10=6$$ then $$6-2=4\\ o'clock$$ Give this a try, what time is 18:39? or how about 22:18?\n",
+    "\n",
+    "Many modern watches, smartphones, alarm clocks, etc. allow you to use the 24 hour clock, try it out for a week or two and see how fast you adjust to this format."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Different Ways to Express Time\n",
+    "Now that we have a much better understanding of how time works and the relationships between the different units we can start getting creative and come up with other ways to express time. Check out this video for an abstract wooden pangulum clock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%addYoutube https://www.youtube.com/embed/9ZzkMIrWdPE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is another abstract way of telling time, can you decipher what each colour represent?\n",
+    "\n",
+    "You can speed up the clock to see how each ring behaves over time, when you think you have figured it out check your answers below."
    ]
   },
   {
@@ -620,15 +676,18 @@
     "                <span class=\"wrong\" id=\"Q5W\">&#10007</span>\n",
     "            </li>\n",
     "        </ul>\n",
-    "        <span class=\"ansBtn\" onclick=\"checkAns()\">Check Answers!</span>\n",
+    "        <span class=\"ansBtn\" id=\"ansBtn\">Check Answers!</span>\n",
     "    </div>\n",
     "\n",
     "    <script>\n",
-    "    var clickListener = \n",
+    "        document.getElementById('ansBtn').onclick = chechAns();\n",
+    "        console.log(document.getElementById('ansBtn'));\n",
     "        function checkAns() {\n",
     "            var ansArray = [];\n",
     "            var questionList = document.getElementById('list');\n",
+    "            //Change for loops to conventional style, doesnt seem to be able to handle this style\n",
     "            for (var e of document.getElementsByClassName('correct')) {\n",
+    "                console.log(e);\n",
     "                e.style.display = 'none';\n",
     "            }\n",
     "            for (levart e of document.getElementsByClassName('wrong')) {\n",
